fix(docs): add sidenav shadow on mobile, close sidenav on NavItem click on mobile (#2306)
* mobile: add sidenav border, close sidenav on NavItem click

* close mobile nav on item select

* cleanup unused code

--- a/packages/theme-patternfly-org/layouts/sideNavLayout/sideNavLayout.css
+++ b/packages/theme-patternfly-org/layouts/sideNavLayout/sideNavLayout.css
@@ -16,8 +16,10 @@
   margin-left: 8px;
 }
 
-.ws-page-sidebar {
-  box-shadow: none !important;
+@media (min-width: 1200px) {
+  .ws-page-sidebar {
+    box-shadow: none !important;
+  }
 }
 
 .ws-page-sidebar > .pf-c-page__sidebar-body {
